export const snapshot = {};

snapshot[`nu / linux / diff 1`] = `
"\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/diff?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$\\"(\$args | str join ' ')\\" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print --stderr
    return
  }

  \$\\"(ansi red)(\$args | str join ' ')(ansi reset)\\" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi green)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi yellow)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi blue)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi magenta)(\$args | first)(ansi reset)\\" | print --no-newline
  if (\$args | length) > 1 {
    \$\\" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)\\" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$\\"(\$args | str join ' ')\\"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$\\"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting\\"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/diff'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def fileOp [] {
  for pair in \$env.FILE_DIFF_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$\\"(\$env.REQ_URL_CFG)/file/(\$src)\\"

    let fileNewTemp = opPrintRunCmd mktemp --suffix '.file.diff.tmp' --tmpdir
    opPrintMaybeRunCmd '\$\\"(' http get --raw --redirect-mode follow \$\\"r#'(\$url)'#\\" ')\\"' '|' save --force \$\\"r#'(\$fileNewTemp)'#\\"

    let diffCmd = if (which diff | is-not-empty) { 'diff' } else { 'fc' }

    if (\$dst | path exists) {
      opPrintMaybeRunCmd \$diffCmd \$\\"r#'(\$dst)'#\\" \$\\"r#'(\$fileNewTemp)'#\\" '|' complete '|' get stdout '|' str trim --right
    } else {
      opPrintWarn \$\\"\`(\$dst)\` does not exist\\"
    }

    opPrintRunCmd rm --force \$\\"r#'(\$fileNewTemp)'#\\"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$\\"{(\$e.0)}\\" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_DIFF_PATH_PAIRS = [ r#'docker|docker/config.json|{HOME}/.docker/config.json'#, r#'fzf|fzf/theme.zsh|{HOME}/.fzf/theme.zsh'#, r#'ghostty|ghostty/config|{HOME}/.config/ghostty/config'#, r#'ghostty|ghostty/themes/theme|{HOME}/.config/ghostty/themes/theme'#, r#'konsole|konsole/Default.profile|{HOME}/.local/share/konsole/Default.profile'#, r#'konsole|konsole/theme.colorscheme|{HOME}/.local/share/konsole/theme.colorscheme'#, r#'nu|nu/nu/00-vim.nu|{HOME}/.config/nushell/autoload/00-vim.nu'#, r#'nu|nu/nu/01-nvim.nu|{HOME}/.config/nushell/autoload/01-nvim.nu'#, r#'nu|nu/nu/70-wut.nu|{HOME}/.config/nushell/autoload/70-wut.nu'#, r#'nu|nu/env.nu|{HOME}/.config/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/.config/nushell/config.nu'#, r#'nvim|nvim/init.lua|{HOME}/.config/nvim/init.lua'#, r#'nvim|nvim/lua/plugins/spec.lua|{HOME}/.config/nvim/lua/plugins/spec.lua'#, r#'pwsh|pwsh/pwsh/05-bun.ps1|{HOME}/.pwsh/05-bun.ps1'#, r#'pwsh|pwsh/pwsh/05-deno.ps1|{HOME}/.pwsh/05-deno.ps1'#, r#'pwsh|pwsh/pwsh/05-zed.ps1|{HOME}/.pwsh/05-zed.ps1'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/pwsh/11-nvim.ps1|{HOME}/.pwsh/11-nvim.ps1'#, r#'pwsh|pwsh/pwsh/20-fzf.ps1|{HOME}/.pwsh/20-fzf.ps1'#, r#'pwsh|pwsh/pwsh/70-wut.ps1|{HOME}/.pwsh/70-wut.ps1'#, r#'pwsh|pwsh/pwsh/99-bin.ps1|{HOME}/.pwsh/99-bin.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/.config/powershell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/.config/powershell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'starship|starship/starship.toml|{HOME}/.config/starship.toml'#, r#'zellij|zellij/config.kdl|{HOME}/.config/zellij/config.kdl'#, r#'zellij|zellij/themes/theme.kdl|{HOME}/.config/zellij/themes/theme.kdl'#, r#'zsh|zsh/zsh/00-brew.zsh|{HOME}/.zsh/00-brew.zsh'#, r#'zsh|zsh/zsh/05-android.zsh|{HOME}/.zsh/05-android.zsh'#, r#'zsh|zsh/zsh/05-bun.zsh|{HOME}/.zsh/05-bun.zsh'#, r#'zsh|zsh/zsh/05-cargo.zsh|{HOME}/.zsh/05-cargo.zsh'#, r#'zsh|zsh/zsh/05-deno.zsh|{HOME}/.zsh/05-deno.zsh'#, r#'zsh|zsh/zsh/05-go.zsh|{HOME}/.zsh/05-go.zsh'#, r#'zsh|zsh/zsh/05-xcode.zsh|{HOME}/.zsh/05-xcode.zsh'#, r#'zsh|zsh/zsh/05-zed.zsh|{HOME}/.zsh/05-zed.zsh'#, r#'zsh|zsh/zsh/10-vim.zsh|{HOME}/.zsh/10-vim.zsh'#, r#'zsh|zsh/zsh/11-nvim.zsh|{HOME}/.zsh/11-nvim.zsh'#, r#'zsh|zsh/zsh/20-fzf.zsh|{HOME}/.zsh/20-fzf.zsh'#, r#'zsh|zsh/zsh/20-ssh.zsh|{HOME}/.zsh/20-ssh.zsh'#, r#'zsh|zsh/zsh/60-incus.zsh|{HOME}/.zsh/60-incus.zsh'#, r#'zsh|zsh/zsh/66-docker.zsh|{HOME}/.zsh/66-docker.zsh'#, r#'zsh|zsh/zsh/69-proot-distro.zsh|{HOME}/.zsh/69-proot-distro.zsh'#, r#'zsh|zsh/zsh/70-wut.zsh|{HOME}/.zsh/70-wut.zsh'#, r#'zsh|zsh/zsh/99-bin.zsh|{HOME}/.zsh/99-bin.zsh'#, r#'zsh|zsh/zshenv|{HOME}/.zshenv'#, r#'zsh|zsh/zshrc|{HOME}/.zshrc'# ]

file
"
`;

snapshot[`nu / linux / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_FIND_KEYS = [ r#'docker|config.json'#, r#'fzf|theme.zsh, theme.ps1'#, r#'ghostty|config, themes'#, r#'konsole|Default.profile, theme.colorscheme'#, r#'nu|nu, env.nu, config.nu'#, r#'nvim|init.lua, lua'#, r#'pwsh|pwsh, env.ps1, profile.ps1'#, r#'ssh|hushlogin'#, r#'starship|starship.toml'#, r#'zellij|config.kdl, themes'#, r#'zsh|zsh, zshenv, zshrc'# ]

file
\`
`;

snapshot[`nu / linux / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/sync?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def fileOp [] {
  if 'FILE_SYNC_CLEAR_DIRS' in \$env {
    for dir in \$env.FILE_SYNC_CLEAR_DIRS {
      let dirParts = \$dir | split row '|'

      mut bin = ''
      for alias in (\$dirParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let dst = replaceEnv \$dirParts.1 | path expand
      opPrintMaybeRunCmd rm --force --permanent --recursive \$"r#'(\$dst)'#"
    }
  }

  mut createdDirs = []
  for pair in \$env.FILE_SYNC_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$"(\$env.REQ_URL_CFG)/file/(\$src)"

    let dstParent = \$dst | path dirname
    if (\$dstParent not-in \$createdDirs) {
      \$createdDirs = \$createdDirs ++ [\$dstParent]
      opPrintMaybeRunCmd mkdir \$"r#'(\$dstParent)'#"
    }
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$url)'#" ')"' '|' save --force \$"r#'(\$dst)'#"
  }

  if 'FILE_SYNC_PATH_PERMS' in \$env {
    for perm in \$env.FILE_SYNC_PATH_PERMS {
      let permParts = \$perm | split row '|'

      mut bin = ''
      for alias in (\$permParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let cmd = replaceEnv \$permParts.1
      opPrintMaybeRunCmd ...(\$cmd | split row ' ')
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_SYNC_PATH_PAIRS = [ r#'docker|docker/config.json|{HOME}/.docker/config.json'#, r#'fzf|fzf/theme.zsh|{HOME}/.fzf/theme.zsh'#, r#'ghostty|ghostty/config|{HOME}/.config/ghostty/config'#, r#'ghostty|ghostty/themes/theme|{HOME}/.config/ghostty/themes/theme'#, r#'konsole|konsole/Default.profile|{HOME}/.local/share/konsole/Default.profile'#, r#'konsole|konsole/theme.colorscheme|{HOME}/.local/share/konsole/theme.colorscheme'#, r#'nu|nu/nu/00-vim.nu|{HOME}/.config/nushell/autoload/00-vim.nu'#, r#'nu|nu/nu/01-nvim.nu|{HOME}/.config/nushell/autoload/01-nvim.nu'#, r#'nu|nu/nu/70-wut.nu|{HOME}/.config/nushell/autoload/70-wut.nu'#, r#'nu|nu/env.nu|{HOME}/.config/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/.config/nushell/config.nu'#, r#'nvim|nvim/init.lua|{HOME}/.config/nvim/init.lua'#, r#'nvim|nvim/lua/plugins/spec.lua|{HOME}/.config/nvim/lua/plugins/spec.lua'#, r#'pwsh|pwsh/pwsh/05-bun.ps1|{HOME}/.pwsh/05-bun.ps1'#, r#'pwsh|pwsh/pwsh/05-deno.ps1|{HOME}/.pwsh/05-deno.ps1'#, r#'pwsh|pwsh/pwsh/05-zed.ps1|{HOME}/.pwsh/05-zed.ps1'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/pwsh/11-nvim.ps1|{HOME}/.pwsh/11-nvim.ps1'#, r#'pwsh|pwsh/pwsh/20-fzf.ps1|{HOME}/.pwsh/20-fzf.ps1'#, r#'pwsh|pwsh/pwsh/70-wut.ps1|{HOME}/.pwsh/70-wut.ps1'#, r#'pwsh|pwsh/pwsh/99-bin.ps1|{HOME}/.pwsh/99-bin.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/.config/powershell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/.config/powershell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'starship|starship/starship.toml|{HOME}/.config/starship.toml'#, r#'zellij|zellij/config.kdl|{HOME}/.config/zellij/config.kdl'#, r#'zellij|zellij/themes/theme.kdl|{HOME}/.config/zellij/themes/theme.kdl'#, r#'zsh|zsh/zsh/00-brew.zsh|{HOME}/.zsh/00-brew.zsh'#, r#'zsh|zsh/zsh/05-android.zsh|{HOME}/.zsh/05-android.zsh'#, r#'zsh|zsh/zsh/05-bun.zsh|{HOME}/.zsh/05-bun.zsh'#, r#'zsh|zsh/zsh/05-cargo.zsh|{HOME}/.zsh/05-cargo.zsh'#, r#'zsh|zsh/zsh/05-deno.zsh|{HOME}/.zsh/05-deno.zsh'#, r#'zsh|zsh/zsh/05-go.zsh|{HOME}/.zsh/05-go.zsh'#, r#'zsh|zsh/zsh/05-xcode.zsh|{HOME}/.zsh/05-xcode.zsh'#, r#'zsh|zsh/zsh/05-zed.zsh|{HOME}/.zsh/05-zed.zsh'#, r#'zsh|zsh/zsh/10-vim.zsh|{HOME}/.zsh/10-vim.zsh'#, r#'zsh|zsh/zsh/11-nvim.zsh|{HOME}/.zsh/11-nvim.zsh'#, r#'zsh|zsh/zsh/20-fzf.zsh|{HOME}/.zsh/20-fzf.zsh'#, r#'zsh|zsh/zsh/20-ssh.zsh|{HOME}/.zsh/20-ssh.zsh'#, r#'zsh|zsh/zsh/60-incus.zsh|{HOME}/.zsh/60-incus.zsh'#, r#'zsh|zsh/zsh/66-docker.zsh|{HOME}/.zsh/66-docker.zsh'#, r#'zsh|zsh/zsh/69-proot-distro.zsh|{HOME}/.zsh/69-proot-distro.zsh'#, r#'zsh|zsh/zsh/70-wut.zsh|{HOME}/.zsh/70-wut.zsh'#, r#'zsh|zsh/zsh/99-bin.zsh|{HOME}/.zsh/99-bin.zsh'#, r#'zsh|zsh/zshenv|{HOME}/.zshenv'#, r#'zsh|zsh/zshrc|{HOME}/.zshrc'# ]

\$env.FILE_SYNC_CLEAR_DIRS = [ r#'ghostty|{HOME}/.config/ghostty/themes'#, r#'nu|{HOME}/.config/nushell/autoload'#, r#'nvim|{HOME}/.config/nvim/lua'#, r#'pwsh|{HOME}/.pwsh'#, r#'zellij|{HOME}/.config/zellij/themes'#, r#'zsh|{HOME}/.zsh'# ]

file
\`
`;

snapshot[`nu / darwin / diff 1`] = `
"\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/diff?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$\\"(\$args | str join ' ')\\" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print --stderr
    return
  }

  \$\\"(ansi red)(\$args | str join ' ')(ansi reset)\\" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi green)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi yellow)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi blue)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi magenta)(\$args | first)(ansi reset)\\" | print --no-newline
  if (\$args | length) > 1 {
    \$\\" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)\\" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$\\"(\$args | str join ' ')\\"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$\\"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting\\"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/file/diff'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def fileOp [] {
  for pair in \$env.FILE_DIFF_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$\\"(\$env.REQ_URL_CFG)/file/(\$src)\\"

    let fileNewTemp = opPrintRunCmd mktemp --suffix '.file.diff.tmp' --tmpdir
    opPrintMaybeRunCmd '\$\\"(' http get --raw --redirect-mode follow \$\\"r#'(\$url)'#\\" ')\\"' '|' save --force \$\\"r#'(\$fileNewTemp)'#\\"

    let diffCmd = if (which diff | is-not-empty) { 'diff' } else { 'fc' }

    if (\$dst | path exists) {
      opPrintMaybeRunCmd \$diffCmd \$\\"r#'(\$dst)'#\\" \$\\"r#'(\$fileNewTemp)'#\\" '|' complete '|' get stdout '|' str trim --right
    } else {
      opPrintWarn \$\\"\`(\$dst)\` does not exist\\"
    }

    opPrintRunCmd rm --force \$\\"r#'(\$fileNewTemp)'#\\"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$\\"{(\$e.0)}\\" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_DIFF_PATH_PAIRS = [ r#'docker|docker/config.json|{HOME}/.docker/config.json'#, r#'fzf|fzf/theme.zsh|{HOME}/.fzf/theme.zsh'#, r#'ghostty|ghostty/config|{HOME}/.config/ghostty/config'#, r#'ghostty|ghostty/themes/theme|{HOME}/.config/ghostty/themes/theme'#, r#'nu|nu/nu/00-vim.nu|{HOME}/.config/nushell/autoload/00-vim.nu'#, r#'nu|nu/nu/01-nvim.nu|{HOME}/.config/nushell/autoload/01-nvim.nu'#, r#'nu|nu/nu/70-wut.nu|{HOME}/.config/nushell/autoload/70-wut.nu'#, r#'nu|nu/env.nu|{HOME}/.config/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/.config/nushell/config.nu'#, r#'nvim|nvim/init.lua|{HOME}/.config/nvim/init.lua'#, r#'nvim|nvim/lua/plugins/spec.lua|{HOME}/.config/nvim/lua/plugins/spec.lua'#, r#'pwsh|pwsh/pwsh/05-bun.ps1|{HOME}/.pwsh/05-bun.ps1'#, r#'pwsh|pwsh/pwsh/05-deno.ps1|{HOME}/.pwsh/05-deno.ps1'#, r#'pwsh|pwsh/pwsh/05-zed.ps1|{HOME}/.pwsh/05-zed.ps1'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/pwsh/11-nvim.ps1|{HOME}/.pwsh/11-nvim.ps1'#, r#'pwsh|pwsh/pwsh/20-fzf.ps1|{HOME}/.pwsh/20-fzf.ps1'#, r#'pwsh|pwsh/pwsh/70-wut.ps1|{HOME}/.pwsh/70-wut.ps1'#, r#'pwsh|pwsh/pwsh/99-bin.ps1|{HOME}/.pwsh/99-bin.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/.config/powershell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/.config/powershell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'starship|starship/starship.toml|{HOME}/.config/starship.toml'#, r#'zellij|zellij/config.kdl|{HOME}/.config/zellij/config.kdl'#, r#'zellij|zellij/themes/theme.kdl|{HOME}/.config/zellij/themes/theme.kdl'#, r#'zsh|zsh/zsh/00-brew.zsh|{HOME}/.zsh/00-brew.zsh'#, r#'zsh|zsh/zsh/05-android.zsh|{HOME}/.zsh/05-android.zsh'#, r#'zsh|zsh/zsh/05-bun.zsh|{HOME}/.zsh/05-bun.zsh'#, r#'zsh|zsh/zsh/05-cargo.zsh|{HOME}/.zsh/05-cargo.zsh'#, r#'zsh|zsh/zsh/05-deno.zsh|{HOME}/.zsh/05-deno.zsh'#, r#'zsh|zsh/zsh/05-go.zsh|{HOME}/.zsh/05-go.zsh'#, r#'zsh|zsh/zsh/05-xcode.zsh|{HOME}/.zsh/05-xcode.zsh'#, r#'zsh|zsh/zsh/05-zed.zsh|{HOME}/.zsh/05-zed.zsh'#, r#'zsh|zsh/zsh/10-vim.zsh|{HOME}/.zsh/10-vim.zsh'#, r#'zsh|zsh/zsh/11-nvim.zsh|{HOME}/.zsh/11-nvim.zsh'#, r#'zsh|zsh/zsh/20-fzf.zsh|{HOME}/.zsh/20-fzf.zsh'#, r#'zsh|zsh/zsh/20-ssh.zsh|{HOME}/.zsh/20-ssh.zsh'#, r#'zsh|zsh/zsh/60-incus.zsh|{HOME}/.zsh/60-incus.zsh'#, r#'zsh|zsh/zsh/66-docker.zsh|{HOME}/.zsh/66-docker.zsh'#, r#'zsh|zsh/zsh/69-proot-distro.zsh|{HOME}/.zsh/69-proot-distro.zsh'#, r#'zsh|zsh/zsh/70-wut.zsh|{HOME}/.zsh/70-wut.zsh'#, r#'zsh|zsh/zsh/99-bin.zsh|{HOME}/.zsh/99-bin.zsh'#, r#'zsh|zsh/zshenv|{HOME}/.zshenv'#, r#'zsh|zsh/zshrc|{HOME}/.zshrc'# ]

file
"
`;

snapshot[`nu / darwin / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_FIND_KEYS = [ r#'docker|config.json'#, r#'fzf|theme.zsh, theme.ps1'#, r#'ghostty|config, themes'#, r#'nu|nu, env.nu, config.nu'#, r#'nvim|init.lua, lua'#, r#'pwsh|pwsh, env.ps1, profile.ps1'#, r#'ssh|hushlogin'#, r#'starship|starship.toml'#, r#'zellij|config.kdl, themes'#, r#'zsh|zsh, zshenv, zshrc'# ]

file
\`
`;

snapshot[`nu / darwin / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/sync?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/file/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def fileOp [] {
  if 'FILE_SYNC_CLEAR_DIRS' in \$env {
    for dir in \$env.FILE_SYNC_CLEAR_DIRS {
      let dirParts = \$dir | split row '|'

      mut bin = ''
      for alias in (\$dirParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let dst = replaceEnv \$dirParts.1 | path expand
      opPrintMaybeRunCmd rm --force --permanent --recursive \$"r#'(\$dst)'#"
    }
  }

  mut createdDirs = []
  for pair in \$env.FILE_SYNC_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$"(\$env.REQ_URL_CFG)/file/(\$src)"

    let dstParent = \$dst | path dirname
    if (\$dstParent not-in \$createdDirs) {
      \$createdDirs = \$createdDirs ++ [\$dstParent]
      opPrintMaybeRunCmd mkdir \$"r#'(\$dstParent)'#"
    }
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$url)'#" ')"' '|' save --force \$"r#'(\$dst)'#"
  }

  if 'FILE_SYNC_PATH_PERMS' in \$env {
    for perm in \$env.FILE_SYNC_PATH_PERMS {
      let permParts = \$perm | split row '|'

      mut bin = ''
      for alias in (\$permParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let cmd = replaceEnv \$permParts.1
      opPrintMaybeRunCmd ...(\$cmd | split row ' ')
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_SYNC_PATH_PAIRS = [ r#'docker|docker/config.json|{HOME}/.docker/config.json'#, r#'fzf|fzf/theme.zsh|{HOME}/.fzf/theme.zsh'#, r#'ghostty|ghostty/config|{HOME}/.config/ghostty/config'#, r#'ghostty|ghostty/themes/theme|{HOME}/.config/ghostty/themes/theme'#, r#'nu|nu/nu/00-vim.nu|{HOME}/.config/nushell/autoload/00-vim.nu'#, r#'nu|nu/nu/01-nvim.nu|{HOME}/.config/nushell/autoload/01-nvim.nu'#, r#'nu|nu/nu/70-wut.nu|{HOME}/.config/nushell/autoload/70-wut.nu'#, r#'nu|nu/env.nu|{HOME}/.config/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/.config/nushell/config.nu'#, r#'nvim|nvim/init.lua|{HOME}/.config/nvim/init.lua'#, r#'nvim|nvim/lua/plugins/spec.lua|{HOME}/.config/nvim/lua/plugins/spec.lua'#, r#'pwsh|pwsh/pwsh/05-bun.ps1|{HOME}/.pwsh/05-bun.ps1'#, r#'pwsh|pwsh/pwsh/05-deno.ps1|{HOME}/.pwsh/05-deno.ps1'#, r#'pwsh|pwsh/pwsh/05-zed.ps1|{HOME}/.pwsh/05-zed.ps1'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/pwsh/11-nvim.ps1|{HOME}/.pwsh/11-nvim.ps1'#, r#'pwsh|pwsh/pwsh/20-fzf.ps1|{HOME}/.pwsh/20-fzf.ps1'#, r#'pwsh|pwsh/pwsh/70-wut.ps1|{HOME}/.pwsh/70-wut.ps1'#, r#'pwsh|pwsh/pwsh/99-bin.ps1|{HOME}/.pwsh/99-bin.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/.config/powershell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/.config/powershell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'starship|starship/starship.toml|{HOME}/.config/starship.toml'#, r#'zellij|zellij/config.kdl|{HOME}/.config/zellij/config.kdl'#, r#'zellij|zellij/themes/theme.kdl|{HOME}/.config/zellij/themes/theme.kdl'#, r#'zsh|zsh/zsh/00-brew.zsh|{HOME}/.zsh/00-brew.zsh'#, r#'zsh|zsh/zsh/05-android.zsh|{HOME}/.zsh/05-android.zsh'#, r#'zsh|zsh/zsh/05-bun.zsh|{HOME}/.zsh/05-bun.zsh'#, r#'zsh|zsh/zsh/05-cargo.zsh|{HOME}/.zsh/05-cargo.zsh'#, r#'zsh|zsh/zsh/05-deno.zsh|{HOME}/.zsh/05-deno.zsh'#, r#'zsh|zsh/zsh/05-go.zsh|{HOME}/.zsh/05-go.zsh'#, r#'zsh|zsh/zsh/05-xcode.zsh|{HOME}/.zsh/05-xcode.zsh'#, r#'zsh|zsh/zsh/05-zed.zsh|{HOME}/.zsh/05-zed.zsh'#, r#'zsh|zsh/zsh/10-vim.zsh|{HOME}/.zsh/10-vim.zsh'#, r#'zsh|zsh/zsh/11-nvim.zsh|{HOME}/.zsh/11-nvim.zsh'#, r#'zsh|zsh/zsh/20-fzf.zsh|{HOME}/.zsh/20-fzf.zsh'#, r#'zsh|zsh/zsh/20-ssh.zsh|{HOME}/.zsh/20-ssh.zsh'#, r#'zsh|zsh/zsh/60-incus.zsh|{HOME}/.zsh/60-incus.zsh'#, r#'zsh|zsh/zsh/66-docker.zsh|{HOME}/.zsh/66-docker.zsh'#, r#'zsh|zsh/zsh/69-proot-distro.zsh|{HOME}/.zsh/69-proot-distro.zsh'#, r#'zsh|zsh/zsh/70-wut.zsh|{HOME}/.zsh/70-wut.zsh'#, r#'zsh|zsh/zsh/99-bin.zsh|{HOME}/.zsh/99-bin.zsh'#, r#'zsh|zsh/zshenv|{HOME}/.zshenv'#, r#'zsh|zsh/zshrc|{HOME}/.zshrc'# ]

\$env.FILE_SYNC_CLEAR_DIRS = [ r#'ghostty|{HOME}/.config/ghostty/themes'#, r#'nu|{HOME}/.config/nushell/autoload'#, r#'nvim|{HOME}/.config/nvim/lua'#, r#'pwsh|{HOME}/.pwsh'#, r#'zellij|{HOME}/.config/zellij/themes'#, r#'zsh|{HOME}/.zsh'# ]

file
\`
`;

snapshot[`nu / linux / find (with filter) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find/git?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/find/git'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

\$env.FILE_FIND_PARTS = r#'git'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_FIND_KEYS = [  ]

file
\`
`;

snapshot[`nu / linux / find (with sysHost) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=linux&sysHost=testhost'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.SYS_HOST = r#'testhost'#

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&sysHost=testhost'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_FIND_KEYS = [ r#'docker|config.json'#, r#'fzf|theme.zsh, theme.ps1'#, r#'ghostty|config, themes'#, r#'konsole|Default.profile, theme.colorscheme'#, r#'nu|nu, env.nu, config.nu'#, r#'nvim|init.lua, lua'#, r#'pwsh|pwsh, env.ps1, profile.ps1'#, r#'ssh|hushlogin'#, r#'starship|starship.toml'#, r#'zellij|config.kdl, themes'#, r#'zsh|zsh, zshenv, zshrc'# ]

file
\`
`;

snapshot[`nu / winnt / diff 1`] = `
"\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/diff?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$\\"(\$args | str join ' ')\\" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print --stderr
    return
  }

  \$\\"(ansi red)(\$args | str join ' ')(ansi reset)\\" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi green)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi yellow)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi blue)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi magenta)(\$args | first)(ansi reset)\\" | print --no-newline
  if (\$args | length) > 1 {
    \$\\" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)\\" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$\\"(\$args | str join ' ')\\"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$\\"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting\\"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/file/diff'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def fileOp [] {
  for pair in \$env.FILE_DIFF_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$\\"(\$env.REQ_URL_CFG)/file/(\$src)\\"

    let fileNewTemp = opPrintRunCmd mktemp --suffix '.file.diff.tmp' --tmpdir
    opPrintMaybeRunCmd '\$\\"(' http get --raw --redirect-mode follow \$\\"r#'(\$url)'#\\" ')\\"' '|' save --force \$\\"r#'(\$fileNewTemp)'#\\"

    let diffCmd = if (which diff | is-not-empty) { 'diff' } else { 'fc' }

    if (\$dst | path exists) {
      opPrintMaybeRunCmd \$diffCmd \$\\"r#'(\$dst)'#\\" \$\\"r#'(\$fileNewTemp)'#\\" '|' complete '|' get stdout '|' str trim --right
    } else {
      opPrintWarn \$\\"\`(\$dst)\` does not exist\\"
    }

    opPrintRunCmd rm --force \$\\"r#'(\$fileNewTemp)'#\\"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$\\"{(\$e.0)}\\" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_DIFF_PATH_PAIRS = [ r#'docker|docker/config.json|{HOME}/.docker/config.json'#, r#'fzf|fzf/theme.ps1|{HOME}/.fzf/theme.ps1'#, r#'nu|nu/nu/00-vim.nu|{HOME}/AppData/Roaming/nushell/autoload/00-vim.nu'#, r#'nu|nu/nu/01-nvim.nu|{HOME}/AppData/Roaming/nushell/autoload/01-nvim.nu'#, r#'nu|nu/nu/70-wut.nu|{HOME}/AppData/Roaming/nushell/autoload/70-wut.nu'#, r#'nu|nu/env.nu|{HOME}/AppData/Roaming/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/AppData/Roaming/nushell/config.nu'#, r#'nvim|nvim/init.lua|{HOME}/AppData/Local/nvim/init.lua'#, r#'nvim|nvim/lua/plugins/spec.lua|{HOME}/AppData/Local/nvim/lua/plugins/spec.lua'#, r#'pwsh|pwsh/pwsh/05-bun.ps1|{HOME}/.pwsh/05-bun.ps1'#, r#'pwsh|pwsh/pwsh/05-deno.ps1|{HOME}/.pwsh/05-deno.ps1'#, r#'pwsh|pwsh/pwsh/05-zed.ps1|{HOME}/.pwsh/05-zed.ps1'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/pwsh/11-nvim.ps1|{HOME}/.pwsh/11-nvim.ps1'#, r#'pwsh|pwsh/pwsh/20-fzf.ps1|{HOME}/.pwsh/20-fzf.ps1'#, r#'pwsh|pwsh/pwsh/70-wut.ps1|{HOME}/.pwsh/70-wut.ps1'#, r#'pwsh|pwsh/pwsh/99-bin.ps1|{HOME}/.pwsh/99-bin.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/Documents/PowerShell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/Documents/PowerShell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'starship|starship/starship.toml|{HOME}/.config/starship.toml'#, r#'winget|winget/settings.json|{HOME}/AppData/Local/Packages/Microsoft.DesktopAppInstaller_8wekyb3d8bbwe/LocalState/settings.json'#, r#'wsl|wsl/wslconfig|{HOME}/.wslconfig'# ]

file
"
`;

snapshot[`nu / winnt / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_FIND_KEYS = [ r#'docker|config.json'#, r#'fzf|theme.zsh, theme.ps1'#, r#'nu|nu, env.nu, config.nu'#, r#'nvim|init.lua, lua'#, r#'pwsh|pwsh, env.ps1, profile.ps1'#, r#'ssh|hushlogin'#, r#'starship|starship.toml'#, r#'winget|settings.json'#, r#'wsl|wslconfig'# ]

file
\`
`;

snapshot[`nu / winnt / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/sync?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VER_MAJOR = 0

\$env.SH_VER_MINOR = 111

do {
  let major = \$env.SH_VER_MAJOR | into int
  let minor = \$env.SH_VER_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/file/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def fileOp [] {
  if 'FILE_SYNC_CLEAR_DIRS' in \$env {
    for dir in \$env.FILE_SYNC_CLEAR_DIRS {
      let dirParts = \$dir | split row '|'

      mut bin = ''
      for alias in (\$dirParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let dst = replaceEnv \$dirParts.1 | path expand
      opPrintMaybeRunCmd rm --force --permanent --recursive \$"r#'(\$dst)'#"
    }
  }

  mut createdDirs = []
  for pair in \$env.FILE_SYNC_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dst = replaceEnv \$pairParts.2 | path expand

    let url = \$"(\$env.REQ_URL_CFG)/file/(\$src)"

    let dstParent = \$dst | path dirname
    if (\$dstParent not-in \$createdDirs) {
      \$createdDirs = \$createdDirs ++ [\$dstParent]
      opPrintMaybeRunCmd mkdir \$"r#'(\$dstParent)'#"
    }
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$url)'#" ')"' '|' save --force \$"r#'(\$dst)'#"
  }

  if 'FILE_SYNC_PATH_PERMS' in \$env {
    for perm in \$env.FILE_SYNC_PATH_PERMS {
      let permParts = \$perm | split row '|'

      mut bin = ''
      for alias in (\$permParts.0 | split row ',') {
        if (which \$alias | is-not-empty) {
          \$bin = \$alias
          break
        }
      }
      if (\$bin | is-empty) {
        continue
      }

      let cmd = replaceEnv \$permParts.1
      opPrintMaybeRunCmd ...(\$cmd | split row ' ')
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn != 'n' {
    fileOp
  }
}


\$env.FILE_SYNC_PATH_PAIRS = [ r#'docker|docker/config.json|{HOME}/.docker/config.json'#, r#'fzf|fzf/theme.ps1|{HOME}/.fzf/theme.ps1'#, r#'nu|nu/nu/00-vim.nu|{HOME}/AppData/Roaming/nushell/autoload/00-vim.nu'#, r#'nu|nu/nu/01-nvim.nu|{HOME}/AppData/Roaming/nushell/autoload/01-nvim.nu'#, r#'nu|nu/nu/70-wut.nu|{HOME}/AppData/Roaming/nushell/autoload/70-wut.nu'#, r#'nu|nu/env.nu|{HOME}/AppData/Roaming/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/AppData/Roaming/nushell/config.nu'#, r#'nvim|nvim/init.lua|{HOME}/AppData/Local/nvim/init.lua'#, r#'nvim|nvim/lua/plugins/spec.lua|{HOME}/AppData/Local/nvim/lua/plugins/spec.lua'#, r#'pwsh|pwsh/pwsh/05-bun.ps1|{HOME}/.pwsh/05-bun.ps1'#, r#'pwsh|pwsh/pwsh/05-deno.ps1|{HOME}/.pwsh/05-deno.ps1'#, r#'pwsh|pwsh/pwsh/05-zed.ps1|{HOME}/.pwsh/05-zed.ps1'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/pwsh/11-nvim.ps1|{HOME}/.pwsh/11-nvim.ps1'#, r#'pwsh|pwsh/pwsh/20-fzf.ps1|{HOME}/.pwsh/20-fzf.ps1'#, r#'pwsh|pwsh/pwsh/70-wut.ps1|{HOME}/.pwsh/70-wut.ps1'#, r#'pwsh|pwsh/pwsh/99-bin.ps1|{HOME}/.pwsh/99-bin.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/Documents/PowerShell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/Documents/PowerShell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'starship|starship/starship.toml|{HOME}/.config/starship.toml'#, r#'winget|winget/settings.json|{HOME}/AppData/Local/Packages/Microsoft.DesktopAppInstaller_8wekyb3d8bbwe/LocalState/settings.json'#, r#'wsl|wsl/wslconfig|{HOME}/.wslconfig'# ]

\$env.FILE_SYNC_CLEAR_DIRS = [ r#'nu|{HOME}/AppData/Roaming/nushell/autoload'#, r#'nvim|{HOME}/AppData/Local/nvim/lua'#, r#'pwsh|{HOME}/.pwsh'# ]

file
\`
`;
